--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,40 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.container {
+  background-color: white;
+  border-radius: 15px;
+  padding: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
 
 .App-link {
   color: #61dafb;
+}
+.mainContainer{
+  display: flex;
+  align-items: center;
+}
+/* App.css */
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+thead {
+  background-color: #f2f2f2;
+}
+
+th, td {
+  padding: 12px;
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+tr:hover {
+  background-color: #f5f5f5;
 }
 
 @keyframes App-logo-spin {
